add month text to cleaning function

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 13,
    "id": "29c81700",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 14,
    "id": "72adcd7d",
    "metadata": {},
    "outputs": [],
@@ -33,12 +33,24 @@
     "    valid_classes = ['A', 'C', 'E', 'F']\n",
     "    df = df[df['CLASS'].isin(valid_classes)]\n",
     "\n",
+    "    # Add Month text column\n",
+    "    month_map = {\n",
+    "        1: 'January', 2: 'February', 3: 'March', 4: 'April',\n",
+    "        5: 'May', 6: 'June', 7: 'July', 8: 'August',\n",
+    "        9: 'September', 10: 'October', 11: 'November', 12: 'December'\n",
+    "    }\n",
+    "    df['MONTH_TEXT'] = df['MONTH'].map(month_map)\n",
+    "\n",
+    "    cols = list(df.columns)\n",
+    "    cols.insert(15, cols.pop(cols.index('MONTH_TEXT')))\n",
+    "    df = df[cols]\n",
+    "\n",
     "    return df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 15,
    "id": "d48cfb86",
    "metadata": {},
    "outputs": [],
@@ -49,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 16,
    "id": "796a06e6",
    "metadata": {},
    "outputs": [],
@@ -68,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 17,
    "id": "d7907c35",
    "metadata": {},
    "outputs": [
@@ -122,7 +134,7 @@
          "type": "float"
         }
        ],
-       "ref": "569ebc85-f3ab-4844-ac57-92050e705dac",
+       "ref": "351821c9-442a-40b1-b314-6fe7c2be62f8",
        "rows": [
         [
          "count",
@@ -140,7 +152,7 @@
          "47.31186237695239",
          "4583.61323178",
          "3581.8511844468944",
-         "0.7512692540416323",
+         "0.7512692670587775",
          "12668.287608217537",
          "12666.064110671494",
          "2010.0",
@@ -151,7 +163,7 @@
          "50.690422039996086",
          "6037.334106975984",
          "4921.232951882572",
-         "0.16838920552635855",
+         "0.16838909932429277",
          "1521.6837314265351",
          "1519.8986009442572",
          "0.0",
@@ -173,7 +185,7 @@
          "15.0",
          "1100.0",
          "756.0",
-         "0.6705232735016733",
+         "0.6705",
          "11292.0",
          "11292.0",
          "2010.0",
@@ -184,7 +196,7 @@
          "31.0",
          "2750.0",
          "2032.0",
-         "0.7911421911421911",
+         "0.7911",
          "12889.0",
          "12889.0",
          "2010.0",
@@ -195,7 +207,7 @@
          "61.0",
          "5617.0",
          "4356.0",
-         "0.8749660679941105",
+         "0.875",
          "14027.0",
          "13970.0",
          "2010.0",
@@ -297,7 +309,7 @@
        "      <td>15.000000</td>\n",
        "      <td>1100.000000</td>\n",
        "      <td>756.000000</td>\n",
-       "      <td>0.670523</td>\n",
+       "      <td>0.670500</td>\n",
        "      <td>11292.000000</td>\n",
        "      <td>11292.000000</td>\n",
        "      <td>2010.0</td>\n",
@@ -308,7 +320,7 @@
        "      <td>31.000000</td>\n",
        "      <td>2750.000000</td>\n",
        "      <td>2032.000000</td>\n",
-       "      <td>0.791142</td>\n",
+       "      <td>0.791100</td>\n",
        "      <td>12889.000000</td>\n",
        "      <td>12889.000000</td>\n",
        "      <td>2010.0</td>\n",
@@ -319,7 +331,7 @@
        "      <td>61.000000</td>\n",
        "      <td>5617.000000</td>\n",
        "      <td>4356.000000</td>\n",
-       "      <td>0.874966</td>\n",
+       "      <td>0.875000</td>\n",
        "      <td>14027.000000</td>\n",
        "      <td>13970.000000</td>\n",
        "      <td>2010.0</td>\n",
@@ -346,9 +358,9 @@
        "mean              47.311862    4583.613232    3581.851184          0.751269   \n",
        "std               50.690422    6037.334107    4921.232952          0.168389   \n",
        "min                1.000000     200.000000       0.000000          0.000000   \n",
-       "25%               15.000000    1100.000000     756.000000          0.670523   \n",
-       "50%               31.000000    2750.000000    2032.000000          0.791142   \n",
-       "75%               61.000000    5617.000000    4356.000000          0.874966   \n",
+       "25%               15.000000    1100.000000     756.000000          0.670500   \n",
+       "50%               31.000000    2750.000000    2032.000000          0.791100   \n",
+       "75%               61.000000    5617.000000    4356.000000          0.875000   \n",
        "max              888.000000  108279.000000   86174.000000          1.000000   \n",
        "\n",
        "       ORIGIN_AIRPORT_ID  DEST_AIRPORT_ID      YEAR          MONTH  \n",
@@ -362,7 +374,7 @@
        "max         16218.000000     16218.000000    2010.0      12.000000  "
       ]
      },
-     "execution_count": 95,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 18,
    "id": "2bb1e042",
    "metadata": {},
    "outputs": [
@@ -462,6 +474,11 @@
          "type": "integer"
         },
         {
+         "name": "MONTH_TEXT",
+         "rawType": "object",
+         "type": "string"
+        },
+        {
          "name": "MONTH",
          "rawType": "int64",
          "type": "integer"
@@ -472,7 +489,7 @@
          "type": "string"
         }
        ],
-       "ref": "c01b5de2-9d09-4356-b660-0129c60bb9db",
+       "ref": "c209799a-f70d-4deb-a176-fbd4981082cf",
        "rows": [
         [
          "0",
@@ -491,6 +508,7 @@
          "Phoenix, AZ",
          "AZ",
          "2010",
+         "April",
          "4",
          "F"
         ],
@@ -511,6 +529,7 @@
          "Phoenix, AZ",
          "AZ",
          "2010",
+         "February",
          "2",
          "F"
         ],
@@ -531,6 +550,7 @@
          "Baltimore, MD",
          "MD",
          "2010",
+         "June",
          "6",
          "F"
         ],
@@ -551,6 +571,7 @@
          "Charlotte, NC",
          "NC",
          "2010",
+         "March",
          "3",
          "F"
         ],
@@ -571,6 +592,7 @@
          "Raleigh/Durham, NC",
          "NC",
          "2010",
+         "March",
          "3",
          "F"
         ],
@@ -591,6 +613,7 @@
          "Charlotte, NC",
          "NC",
          "2010",
+         "October",
          "10",
          "F"
         ],
@@ -611,6 +634,7 @@
          "Philadelphia, PA",
          "PA",
          "2010",
+         "September",
          "9",
          "F"
         ],
@@ -631,6 +655,7 @@
          "Charlotte, NC",
          "NC",
          "2010",
+         "April",
          "4",
          "F"
         ],
@@ -651,6 +676,7 @@
          "Charlotte, NC",
          "NC",
          "2010",
+         "March",
          "3",
          "F"
         ],
@@ -671,6 +697,7 @@
          "Charlotte, NC",
          "NC",
          "2010",
+         "January",
          "1",
          "F"
         ],
@@ -691,6 +718,7 @@
          "Charlotte Amalie, VI",
          "VI",
          "2010",
+         "September",
          "9",
          "F"
         ],
@@ -711,6 +739,7 @@
          "Charlotte, NC",
          "NC",
          "2010",
+         "July",
          "7",
          "F"
         ],
@@ -731,6 +760,7 @@
          "Greensboro/High Point, NC",
          "NC",
          "2010",
+         "July",
          "7",
          "F"
         ],
@@ -751,6 +781,7 @@
          "Charlotte, NC",
          "NC",
          "2010",
+         "April",
          "4",
          "F"
         ],
@@ -771,6 +802,7 @@
          "Greensboro/High Point, NC",
          "NC",
          "2010",
+         "April",
          "4",
          "F"
         ],
@@ -791,6 +823,7 @@
          "San Juan, PR",
          "PR",
          "2010",
+         "March",
          "3",
          "F"
         ],
@@ -811,6 +844,7 @@
          "Charlotte, NC",
          "NC",
          "2010",
+         "June",
          "6",
          "F"
         ],
@@ -831,6 +865,7 @@
          "Charlotte, NC",
          "NC",
          "2010",
+         "October",
          "10",
          "F"
         ],
@@ -851,6 +886,7 @@
          "Philadelphia, PA",
          "PA",
          "2010",
+         "September",
          "9",
          "F"
         ],
@@ -871,6 +907,7 @@
          "Washington, DC",
          "VA",
          "2010",
+         "May",
          "5",
          "F"
         ],
@@ -891,6 +928,7 @@
          "Philadelphia, PA",
          "PA",
          "2010",
+         "May",
          "5",
          "F"
         ],
@@ -911,6 +949,7 @@
          "Philadelphia, PA",
          "PA",
          "2010",
+         "July",
          "7",
          "F"
         ],
@@ -931,6 +970,7 @@
          "Philadelphia, PA",
          "PA",
          "2010",
+         "October",
          "10",
          "F"
         ],
@@ -951,6 +991,7 @@
          "New York, NY",
          "NY",
          "2010",
+         "December",
          "12",
          "F"
         ],
@@ -971,6 +1012,7 @@
          "Philadelphia, PA",
          "PA",
          "2010",
+         "June",
          "6",
          "F"
         ],
@@ -991,6 +1033,7 @@
          "Philadelphia, PA",
          "PA",
          "2010",
+         "July",
          "7",
          "F"
         ],
@@ -1011,6 +1054,7 @@
          "Philadelphia, PA",
          "PA",
          "2010",
+         "August",
          "8",
          "F"
         ],
@@ -1031,6 +1075,7 @@
          "Philadelphia, PA",
          "PA",
          "2010",
+         "July",
          "7",
          "F"
         ],
@@ -1051,6 +1096,7 @@
          "Boston, MA",
          "MA",
          "2010",
+         "April",
          "4",
          "F"
         ],
@@ -1071,6 +1117,7 @@
          "Charlotte Amalie, VI",
          "VI",
          "2010",
+         "October",
          "10",
          "F"
         ],
@@ -1091,6 +1138,7 @@
          "Phoenix, AZ",
          "AZ",
          "2010",
+         "July",
          "7",
          "F"
         ],
@@ -1111,6 +1159,7 @@
          "Orlando, FL",
          "FL",
          "2010",
+         "September",
          "9",
          "F"
         ],
@@ -1131,6 +1180,7 @@
          "San Juan, PR",
          "PR",
          "2010",
+         "July",
          "7",
          "F"
         ],
@@ -1151,6 +1201,7 @@
          "Honolulu, HI",
          "HI",
          "2010",
+         "July",
          "7",
          "F"
         ],
@@ -1171,6 +1222,7 @@
          "Fort Lauderdale, FL",
          "FL",
          "2010",
+         "December",
          "12",
          "F"
         ],
@@ -1191,6 +1243,7 @@
          "Philadelphia, PA",
          "PA",
          "2010",
+         "September",
          "9",
          "F"
         ],
@@ -1211,6 +1264,7 @@
          "Honolulu, HI",
          "HI",
          "2010",
+         "February",
          "2",
          "F"
         ],
@@ -1231,6 +1285,7 @@
          "Atlanta, GA",
          "GA",
          "2010",
+         "January",
          "1",
          "F"
         ],
@@ -1251,6 +1306,7 @@
          "Atlanta, GA",
          "GA",
          "2010",
+         "May",
          "5",
          "F"
         ],
@@ -1271,6 +1327,7 @@
          "New York, NY",
          "NY",
          "2010",
+         "January",
          "1",
          "F"
         ],
@@ -1291,6 +1348,7 @@
          "New York, NY",
          "NY",
          "2010",
+         "January",
          "1",
          "F"
         ],
@@ -1311,6 +1369,7 @@
          "Boston, MA",
          "MA",
          "2010",
+         "August",
          "8",
          "F"
         ],
@@ -1331,6 +1390,7 @@
          "Seattle, WA",
          "WA",
          "2010",
+         "January",
          "1",
          "F"
         ],
@@ -1351,6 +1411,7 @@
          "San Juan, PR",
          "PR",
          "2010",
+         "November",
          "11",
          "F"
         ],
@@ -1371,6 +1432,7 @@
          "Las Vegas, NV",
          "NV",
          "2010",
+         "January",
          "1",
          "F"
         ],
@@ -1391,6 +1453,7 @@
          "New York, NY",
          "NY",
          "2010",
+         "July",
          "7",
          "F"
         ],
@@ -1411,6 +1474,7 @@
          "Las Vegas, NV",
          "NV",
          "2010",
+         "July",
          "7",
          "F"
         ],
@@ -1431,6 +1495,7 @@
          "San Juan, PR",
          "PR",
          "2010",
+         "January",
          "1",
          "F"
         ],
@@ -1451,6 +1516,7 @@
          "New York, NY",
          "NY",
          "2010",
+         "January",
          "1",
          "F"
         ],
@@ -1471,12 +1537,13 @@
          "New York, NY",
          "NY",
          "2010",
+         "March",
          "3",
          "F"
         ]
        ],
        "shape": {
-        "columns": 17,
+        "columns": 18,
         "rows": 178691
        }
       },
@@ -1514,6 +1581,7 @@
        "      <th>DEST_CITY_NAME</th>\n",
        "      <th>DEST_STATE_ABR</th>\n",
        "      <th>YEAR</th>\n",
+       "      <th>MONTH_TEXT</th>\n",
        "      <th>MONTH</th>\n",
        "      <th>CLASS</th>\n",
        "    </tr>\n",
@@ -1536,6 +1604,7 @@
        "      <td>Phoenix, AZ</td>\n",
        "      <td>AZ</td>\n",
        "      <td>2010</td>\n",
+       "      <td>April</td>\n",
        "      <td>4</td>\n",
        "      <td>F</td>\n",
        "    </tr>\n",
@@ -1556,6 +1625,7 @@
        "      <td>Phoenix, AZ</td>\n",
        "      <td>AZ</td>\n",
        "      <td>2010</td>\n",
+       "      <td>February</td>\n",
        "      <td>2</td>\n",
        "      <td>F</td>\n",
        "    </tr>\n",
@@ -1576,6 +1646,7 @@
        "      <td>Baltimore, MD</td>\n",
        "      <td>MD</td>\n",
        "      <td>2010</td>\n",
+       "      <td>June</td>\n",
        "      <td>6</td>\n",
        "      <td>F</td>\n",
        "    </tr>\n",
@@ -1596,6 +1667,7 @@
        "      <td>Charlotte, NC</td>\n",
        "      <td>NC</td>\n",
        "      <td>2010</td>\n",
+       "      <td>March</td>\n",
        "      <td>3</td>\n",
        "      <td>F</td>\n",
        "    </tr>\n",
@@ -1616,11 +1688,13 @@
        "      <td>Raleigh/Durham, NC</td>\n",
        "      <td>NC</td>\n",
        "      <td>2010</td>\n",
+       "      <td>March</td>\n",
        "      <td>3</td>\n",
        "      <td>F</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -1656,6 +1730,7 @@
        "      <td>Kahului, HI</td>\n",
        "      <td>HI</td>\n",
        "      <td>2010</td>\n",
+       "      <td>July</td>\n",
        "      <td>7</td>\n",
        "      <td>F</td>\n",
        "    </tr>\n",
@@ -1676,6 +1751,7 @@
        "      <td>Boston, MA</td>\n",
        "      <td>MA</td>\n",
        "      <td>2010</td>\n",
+       "      <td>July</td>\n",
        "      <td>7</td>\n",
        "      <td>F</td>\n",
        "    </tr>\n",
@@ -1696,6 +1772,7 @@
        "      <td>Honolulu, HI</td>\n",
        "      <td>HI</td>\n",
        "      <td>2010</td>\n",
+       "      <td>August</td>\n",
        "      <td>8</td>\n",
        "      <td>F</td>\n",
        "    </tr>\n",
@@ -1716,6 +1793,7 @@
        "      <td>Nantucket, MA</td>\n",
        "      <td>MA</td>\n",
        "      <td>2010</td>\n",
+       "      <td>July</td>\n",
        "      <td>7</td>\n",
        "      <td>F</td>\n",
        "    </tr>\n",
@@ -1736,12 +1814,13 @@
        "      <td>Honolulu, HI</td>\n",
        "      <td>HI</td>\n",
        "      <td>2010</td>\n",
+       "      <td>July</td>\n",
        "      <td>7</td>\n",
        "      <td>F</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>178691 rows × 17 columns</p>\n",
+       "<p>178691 rows × 18 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1784,36 +1863,36 @@
        "178689              10721    BOS            Boston, MA               MA   \n",
        "178690              13830    OGG           Kahului, HI               HI   \n",
        "\n",
-       "        DEST_AIRPORT_ID DEST      DEST_CITY_NAME DEST_STATE_ABR  YEAR  MONTH  \\\n",
-       "0                 14107  PHX         Phoenix, AZ             AZ  2010      4   \n",
-       "1                 14107  PHX         Phoenix, AZ             AZ  2010      2   \n",
-       "2                 10821  BWI       Baltimore, MD             MD  2010      6   \n",
-       "3                 11057  CLT       Charlotte, NC             NC  2010      3   \n",
-       "4                 14492  RDU  Raleigh/Durham, NC             NC  2010      3   \n",
-       "...                 ...  ...                 ...            ...   ...    ...   \n",
-       "178686            13830  OGG         Kahului, HI             HI  2010      7   \n",
-       "178687            10721  BOS          Boston, MA             MA  2010      7   \n",
-       "178688            12173  HNL        Honolulu, HI             HI  2010      8   \n",
-       "178689            10154  ACK       Nantucket, MA             MA  2010      7   \n",
-       "178690            12173  HNL        Honolulu, HI             HI  2010      7   \n",
+       "        DEST_AIRPORT_ID DEST      DEST_CITY_NAME DEST_STATE_ABR  YEAR  \\\n",
+       "0                 14107  PHX         Phoenix, AZ             AZ  2010   \n",
+       "1                 14107  PHX         Phoenix, AZ             AZ  2010   \n",
+       "2                 10821  BWI       Baltimore, MD             MD  2010   \n",
+       "3                 11057  CLT       Charlotte, NC             NC  2010   \n",
+       "4                 14492  RDU  Raleigh/Durham, NC             NC  2010   \n",
+       "...                 ...  ...                 ...            ...   ...   \n",
+       "178686            13830  OGG         Kahului, HI             HI  2010   \n",
+       "178687            10721  BOS          Boston, MA             MA  2010   \n",
+       "178688            12173  HNL        Honolulu, HI             HI  2010   \n",
+       "178689            10154  ACK       Nantucket, MA             MA  2010   \n",
+       "178690            12173  HNL        Honolulu, HI             HI  2010   \n",
        "\n",
-       "       CLASS  \n",
-       "0          F  \n",
-       "1          F  \n",
-       "2          F  \n",
-       "3          F  \n",
-       "4          F  \n",
-       "...      ...  \n",
-       "178686     F  \n",
-       "178687     F  \n",
-       "178688     F  \n",
-       "178689     F  \n",
-       "178690     F  \n",
+       "       MONTH_TEXT  MONTH CLASS  \n",
+       "0           April      4     F  \n",
+       "1        February      2     F  \n",
+       "2            June      6     F  \n",
+       "3           March      3     F  \n",
+       "4           March      3     F  \n",
+       "...           ...    ...   ...  \n",
+       "178686       July      7     F  \n",
+       "178687       July      7     F  \n",
+       "178688     August      8     F  \n",
+       "178689       July      7     F  \n",
+       "178690       July      7     F  \n",
        "\n",
-       "[178691 rows x 17 columns]"
+       "[178691 rows x 18 columns]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
