--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -16,7 +16,7 @@
     "    # Load each year's file\n",
     "    for year in range(start_year, 2026):\n",
     "        try:\n",
-    "            df = pd.read_csv(f\"clean_data/flights_{year}_clean.csv\")\n",
+    "            df = pd.read_csv(f\"data/clean_data/flights_{year}_clean.csv\")\n",
     "\n",
     "            # Aggregate to monthly totals\n",
     "            monthly = df.groupby('MONTH')['PASSENGERS'].sum().reset_index()\n",
@@ -292,7 +292,7 @@
     "# ----------------------------\n",
     "# LOAD ALL CLEAN CSV FILES\n",
     "# ----------------------------\n",
-    "files = sorted(glob.glob(\"clean_data/flights_*_clean.csv\"))\n",
+    "files = sorted(glob.glob(\"data/clean_data/flights_*_clean.csv\"))\n",
     "\n",
     "df_list = []\n",
     "for f in files:\n",
