--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -67,7 +67,7 @@
    "outputs": [],
    "source": [
     "data2010 = pd.read_csv('data/flights_2010.csv')\n",
-    "data2010clean = pd.read_csv('clean_data/flights_2010_clean.csv')"
+    "data2010clean = pd.read_csv('data/clean_data/flights_2010_clean.csv')"
    ]
   },
   {
@@ -86,7 +86,7 @@
     "    df_clean = clean_data(df_raw)\n",
     "\n",
     "    # save output\n",
-    "    df_clean.to_csv(f\"clean_data/flights_{i}_clean.csv\", index=False)"
+    "    df_clean.to_csv(f\"data/clean_data/flights_{i}_clean.csv\", index=False)"
    ]
   },
   {
@@ -1976,7 +1976,7 @@
     }
    ],
    "source": [
-    "data2010clean = pd.read_csv('clean_data/flights_2010_clean.csv')\n",
+    "data2010clean = pd.read_csv('data/clean_data/flights_2010_clean.csv')\n",
     "data2010clean"
    ]
   }
