cleaned repo, improved comments and documentation

--- a/notebooks/02_analysis.ipynb
+++ b/notebooks/02_analysis.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "            all_data.append(monthly)\n",
     "        except FileNotFoundError:\n",
-    "            print(f\"Missing file for {year} — skipping.\")\n",
+    "            print(f\"Missing file for {year} \u2014 skipping.\")\n",
     "            continue\n",
     "\n",
     "    # Combine all years\n",
@@ -100,7 +100,8 @@
     "    )\n",
     "\n",
     "    return chart\n",
-    "\n"
+    "\n",
+    ""
    ]
   },
   {
@@ -289,9 +290,7 @@
     "\n",
     "alt.data_transformers.disable_max_rows()\n",
     "\n",
-    "# ----------------------------\n",
-    "# LOAD ALL CLEAN CSV FILES\n",
-    "# ----------------------------\n",
+    "# Load all cleaned flight data\n",
     "files = sorted(glob.glob(\"data/clean_data/flights_*_clean.csv\"))\n",
     "\n",
     "df_list = []\n",
@@ -305,9 +304,7 @@
     "\n",
     "df = pd.concat(df_list, ignore_index=True)\n",
     "\n",
-    "# ----------------------------\n",
-    "# AGGREGATE BY YEAR × SEASON\n",
-    "# ----------------------------\n",
+    "# Aggregate by year and season\n",
     "grouped = (\n",
     "    df.groupby([\"YEAR\", \"SEASON\"])\n",
     "      .agg({\n",
@@ -321,7 +318,7 @@
     "\n",
     "season_order = [\"Winter\", \"Spring\", \"Summer\", \"Fall\"]\n",
     "\n",
-    "# Custom season colors (RIGHT VIZ)\n",
+    "# Season color palette\n",
     "season_colors = {\n",
     "    \"Winter\": \"#1e3a8a\",   # dark blue\n",
     "    \"Spring\": \"#10b981\",   # green\n",
@@ -329,14 +326,10 @@
     "    \"Fall\":   \"#b45309\"    # brown/orange\n",
     "}\n",
     "\n",
-    "# ----------------------------\n",
-    "# BRUSH SELECTION\n",
-    "# ----------------------------\n",
+    "# Set up brush selection for interactivity\n",
     "brush = alt.selection_interval(encodings=[\"x\", \"y\"])\n",
     "\n",
-    "# ----------------------------\n",
-    "# SCATTER PLOT (LEFT)\n",
-    "# ----------------------------\n",
+    "# Create scatter plot\n",
     "scatter = (\n",
     "    alt.Chart(grouped)\n",
     "    .mark_circle(size=60, opacity=0.7)  # Smaller points\n",
@@ -344,7 +337,7 @@
     "        x=alt.X(\"SEATS:Q\", title=\"Total Seasonal Seats\"),\n",
     "        y=alt.Y(\"PASSENGERS:Q\", title=\"Total Seasonal Passengers\"),\n",
     "        \n",
-    "        # FIX 1: Use monochromatic blue scale + legend\n",
+    "        # Use monochromatic color scale\n",
     "        color=alt.Color(\n",
     "            \"capacity_percent:Q\",\n",
     "            title=\"Load Factor\",\n",
@@ -377,13 +370,11 @@
     "    .properties(\n",
     "        width=600,\n",
     "        height=450,\n",
-    "        title=\"Seasonal Scatter — Select a Region\"\n",
+    "        title=\"Seasonal Scatter \u2014 Select a Region\"\n",
     "    )\n",
     ")\n",
     "\n",
-    "# ----------------------------\n",
-    "# HISTOGRAM / BAR CHART (RIGHT)\n",
-    "# ----------------------------\n",
+    "# Create histogram of selected data\n",
     "hist = (\n",
     "    alt.Chart(grouped)\n",
     "    .mark_bar(opacity=0.9)\n",
@@ -395,7 +386,7 @@
     "        ),\n",
     "        y=alt.Y(\"count()\", title=\"Number of Seasonal Points\"),\n",
     "\n",
-    "        # FIX 2: Explicit season → color mapping so bars match legend exactly\n",
+    "        # Map seasons to colors\n",
     "        color=alt.Color(\n",
     "            \"SEASON:N\",\n",
     "            sort=season_order,\n",
@@ -414,16 +405,15 @@
     "    .properties(\n",
     "        width=300,\n",
     "        height=450,\n",
-    "        title=\"Load Factor Distribution — Selected Region\"\n",
+    "        title=\"Load Factor Distribution \u2014 Selected Region\"\n",
     "    )\n",
     ")\n",
     "\n",
-    "# ----------------------------\n",
-    "# FINAL LINKED VIEW\n",
-    "# ----------------------------\n",
+    "# Combine charts into linked view\n",
     "final_chart = scatter | hist\n",
     "\n",
-    "final_chart\n"
+    "final_chart\n",
+    ""
    ]
   },
   {
@@ -433,7 +423,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_chart.save(\"linked_scatter_histogram.json\")\n"
+    "final_chart.save(\"linked_scatter_histogram.json\")\n",
+    ""
    ]
   },
   {
@@ -458,9 +449,7 @@
     "import matplotlib.pyplot as plt\n",
     "from datetime import datetime\n",
     "\n",
-    "# -----------------------------\n",
-    "# Load & prepare dataset\n",
-    "# -----------------------------\n",
+    "# Load and prepare data\n",
     "df = pd.read_json(\"webpage_deliverable/data/monthly_metrics.json\")\n",
     "\n",
     "# Create unified datetime column\n",
@@ -473,17 +462,15 @@
     "base = df_total[\"PASSENGERS\"].iloc[0]\n",
     "df_total[\"volume_index\"] = (df_total[\"PASSENGERS\"] / base) * 100\n",
     "\n",
-    "# -----------------------------\n",
-    "# Historical events\n",
-    "# -----------------------------\n",
+    "# Define historical events to annotate\n",
     "events = {\n",
     "    \"Y2K\": \"2000-01-01\",\n",
     "    \"9/11 Attacks\": \"2001-09-01\",\n",
     "    \"Iraq War / Oil Spike\": \"2003-03-01\",\n",
     "    \"Great Recession\": \"2008-09-01\",\n",
-    "    \"Delta–Northwest Merger\": \"2008-10-01\",\n",
-    "    \"United–Continental Merger\": \"2010-10-01\",\n",
-    "    \"American–US Airways Merger\": \"2013-12-01\",\n",
+    "    \"Delta\u2013Northwest Merger\": \"2008-10-01\",\n",
+    "    \"United\u2013Continental Merger\": \"2010-10-01\",\n",
+    "    \"American\u2013US Airways Merger\": \"2013-12-01\",\n",
     "    \"Oil Crash (cheap fuel)\": \"2014-06-01\",\n",
     "    \"COVID Onset\": \"2020-03-01\"\n",
     "}\n",
@@ -491,37 +478,31 @@
     "# Convert to datetime objects\n",
     "events = {label: datetime.strptime(date, \"%Y-%m-%d\") for label, date in events.items()}\n",
     "\n",
-    "# -----------------------------\n",
-    "# Offsets to avoid overlap\n",
-    "# -----------------------------\n",
+    "# Label offsets to prevent overlap\n",
     "offsets = {\n",
     "    \"Y2K\": 12,\n",
     "    \"9/11 Attacks\": -20,\n",
     "    \"Iraq War / Oil Spike\": 10,\n",
     "    \"Great Recession\": -15,\n",
-    "    \"Delta–Northwest Merger\": 8,\n",
-    "    \"United–Continental Merger\": -12,\n",
-    "    \"American–US Airways Merger\": 6,\n",
+    "    \"Delta\u2013Northwest Merger\": 8,\n",
+    "    \"United\u2013Continental Merger\": -12,\n",
+    "    \"American\u2013US Airways Merger\": 6,\n",
     "    \"Oil Crash (cheap fuel)\": -10,\n",
     "    \"COVID Onset\": 15\n",
     "}\n",
     "\n",
-    "# -----------------------------\n",
     "# Create the plot\n",
-    "# -----------------------------\n",
     "plt.figure(figsize=(16, 8))\n",
     "\n",
     "# Trend line\n",
     "plt.plot(df_total[\"date\"], df_total[\"volume_index\"], linewidth=2.5, color=\"steelblue\")\n",
-    "plt.title(\"U.S. Air Travel Volume Index (1999–2020) with Historical Events\", fontsize=20)\n",
+    "plt.title(\"U.S. Air Travel Volume Index (1999\u20132020) with Historical Events\", fontsize=20)\n",
     "plt.ylabel(\"Travel Volume Index (1999 = 100)\", fontsize=14)\n",
     "plt.xlabel(\"Year\", fontsize=14)\n",
     "\n",
     "plt.grid(alpha=0.3)\n",
     "\n",
-    "# -----------------------------\n",
-    "# Add event markers + labels\n",
-    "# -----------------------------\n",
+    "# Add event markers and labels\n",
     "for label, date in events.items():\n",
     "    # Find closest y-value\n",
     "    y_val = df_total.loc[df_total[\"date\"] == date, \"volume_index\"]\n",
@@ -544,15 +525,14 @@
     "            ha=\"center\"\n",
     "        )\n",
     "\n",
-    "# -----------------------------\n",
-    "# Formatting\n",
-    "# -----------------------------\n",
+    "# Final formatting and save\n",
     "plt.tight_layout()\n",
     "\n",
     "# Save a PNG (optional)\n",
     "plt.savefig(\"annotated_timeline.png\", dpi=300, bbox_inches=\"tight\")\n",
     "\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    ""
    ]
   }
  ],
